--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cleverbot-api-node": "0.0.4",
-    "discord.js": "^11.0.0"
+    "discord.js": "^11.0.0",
+    "lodash": "^4.17.4"
   }
 }
